<resources>
    <string name="app_name">DinePlan</string>

    <string name="loading_msg">Loading...</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="username_required">Username required.</string>
    <string name="password_required">Password required.</string>
    <string name="url_required">Url required.</string>
    <string name="tenant_required">Tenant erquired.</string>
    <string name="prompt_floating_amount">Float amount</string>


    <string name="current_sale">Current Sale</string>
    <string name="clear_sale">Clear Sale</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="menu_location">LOCATION</string>
    <string name="menu_shift">SHIFT</string>
    <string name="menu_register">REGISTER</string>
    <string name="menu_reports">REPORTS</string>
    <string name="menu_setting">SETTING</string>
    <string name="menu_logout">LOGOUT</string>

    <string name="include_tax">Including Tax</string>


    <string name="choose_location">Choose Location</string>

    <!-- ADD FOOD -->
    <string name="lbl_note_and_qnt">NOTE</string>
    <string name="hint_add_note">Add a note</string>
    <string name="label_for_here">For Here</string>
    <string name="label_to_go">To Go</string>
    <string name="label_delivery">Delivery</string>
    <string name="btn_txt_add">Add</string>

    <!-- PAYMENT -->
    <string name="btn_txt_split">Split</string>
    <string name="label_record_card_payment">Record Card Payment</string>
    <string name="label_cash">Cash</string>
    <string name="label_other">Other</string>
    <string name="label_amount_tracking">Amount entered is for tracking purpose only. You will not receive a deposit for this transaction.</string>
    <string name="btn_txt_record_payment">Record Payment</string>
    <string name="label_any_amount">Any amount over #amount# will recorded as tip.</string>
    <string name="btn_txt_tender">Tender</string>
    <string name="label_gift_card">Gift Card</string>
    <string name="label_check">Check</string>
    <string name="hint_optional_note">Optional Note</string>
    <string name="btn_new_sale">New Sale</string>
    <string name="label_no_change">No change out of #amount#</string>
    <string name="label_how_would">How would you like you receipt?</string>
    <string name="hint_email_receipt">Email Receipt</string>
    <string name="label_no_receipt">No Receipt</string>
    <string name="label_by_providing">By providing your contact information, you agree businesses you frequent may send you
    digital receipts, marketing, and messages via Squares. See your digital receipts for privacy and prefrences</string>

    <!-- SHIFT -->
    <string name="label_shift">SHIFT</string>
    <string name="btn_txt_start_shift">START SHIFT</string>
    <string name="btn_txt_end_shift">END SHIFT</string>
    <string name="label_shift_end">SHIFT END</string>
    <string name="hint_cash">Cash</string>
    <string name="hint_visa">Visa</string>
    <string name="hint_master">Master</string>
    <string name="hint_amex">Amex</string>
    <string name="btn_txt_endworkshift">END WORKSHIFT</string>
    <string name="btn_txt_cancel">CANCEL</string>
    <string name="btn_txt_open_till">OPEN TILL</string>

    <string name="enter_float_amount">Enter float amount</string>

    <string name="network_not_available">You\’re not connected to the internet. Please try later.</string>
    <string name="network_error">Network Error</string>
    <string name="done">Done</string>
    <string name="no_sale">No Sale</string>

    <string name="help">Help</string>
    <string name="lable_taxes">Taxes</string>
    <string name="lable_tax">Tax</string>


    <string name="entered_amount_is_less_then_total">Entered amount is less then the total.</string>



    <string name="account_type">com.android.dineplan.sync</string>
    <string name="content_authority">com.dineplan.sync.StubProvider</string>



</resources>
