<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/common_margin"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@+id/iv_cross"
        android:padding="@dimen/common_margin"
        android:background="@drawable/floating_amount"
        android:layout_height="wrap_content">

        <TextView
            style="@style/tv_heading"
            android:text="@string/enter_float_amount"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/float_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_floating_amount"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="number"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:background="@color/colorPrimary"
            android:minHeight="0dp"
            android:layout_gravity="right"
            android:layout_margin="@dimen/common_margin"
            android:padding="@dimen/common_margin"
            android:textColor="@color/white"
            style="@style/tv_normal"
            android:text="@string/done"/>
    </LinearLayout>


</LinearLayout>