<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.dineplan.activities.Payment1Activity">

    <include layout="@layout/header_payment1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_25"
        android:orientation="vertical">

        <TextView
            style="@style/tv_heading"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label_amount_tracking" />

        <EditText
            android:drawablePadding="@dimen/margin_5"
            android:id="@+id/et_price"
            style="@style/et_style"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/et_mahroon_bg"
            android:drawableLeft="@drawable/record_and_other_icon"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_payment"
            style="@style/btn_style"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/btn_txt_record_payment"
            android:textColor="@color/mahroon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_any_amount"
            style="@style/tv_small"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/label_any_amount"
            android:textColor="@color/text_color_light_gray" />
    </LinearLayout>
</LinearLayout>
