<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.dineplan.activities.PaymentCashActivity">

    <include layout="@layout/header_payment_receipt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@color/app_bg1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/big_right_check" />

                <TextView
                    android:id="@+id/tv_amount"
                    style="@style/tv_subheading"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/label_no_change"
                    android:textStyle="bold" />

                <TextView
                    style="@style/tv_subheading"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/label_how_would"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_weight="4"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                style="@style/et_style"
                android:background="@drawable/et_mahroon_bg"
                android:drawableLeft="@drawable/mail_icon"
                android:drawablePadding="@dimen/margin_5"
                android:drawableRight="@drawable/right_arrow_icon"
                android:hint="@string/hint_email_receipt"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:src="@drawable/block_icon" />

                <TextView
                    style="@style/tv_subheading"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:text="@string/label_no_receipt"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                style="@style/tv_small"
                android:layout_marginTop="@dimen/margin_5"
                android:gravity="center"
                android:text="@string/label_by_providing"
                android:textColor="@color/text_color_light_gray"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
