<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.dineplan.activities.PaymentCashActivity">

    <include layout="@layout/header_add_food" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_25"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_gift_card"
                style="@style/tv_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_margin"
                android:text="@string/label_gift_card"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rd_gift_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/common_margin" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">


            <TextView
                android:id="@+id/tv_check"
                style="@style/tv_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_margin"
                android:text="@string/label_check"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rd_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/common_margin" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">


            <TextView
                android:id="@+id/tv_other"
                style="@style/tv_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_margin"
                android:text="@string/label_other"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rd_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/common_margin" />

        </RelativeLayout>

        <EditText
            android:id="@+id/et_notes"
            style="@style/et_style"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/hint_optional_note"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences" />
    </LinearLayout>

</LinearLayout>
