<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.dineplan.activities.AddFoodActivity">

    <include layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20">

            <TextView
                style="@style/tv_medium"
                android:text="BIRYANI CHOOSE MANY" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rect_border_bg"
                android:padding="@dimen/margin_15">

                <TextView
                    android:id="@+id/tv_dish_name"
                    style="@style/tv_normal"
                    android:text="EGG"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rect_border_bg"
                android:padding="@dimen/margin_15">

                <TextView
                    android:id="@+id/tv_dish_name1"
                    style="@style/tv_normal"
                    android:text="NON EGG"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_price"
                    style="@style/tv_normal"
                    android:layout_alignParentRight="true"
                    android:text="$10.00"
                    android:textStyle="normal" />
            </RelativeLayout>

            <TextView
                style="@style/tv_medium"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/lbl_note_and_qnt"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_notes"
                style="@style/et_style"
                android:layout_marginTop="@dimen/margin_10"
                android:hint="@string/hint_add_note"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="6"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10">

                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_15"
                    android:src="@drawable/less_icon" />


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/et_quantity"
                        style="@style/et_style"
                        android:layout_width="100dp"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:text="1"
                        android:typeface="monospace" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider_color" />

                <ImageView
                    android:id="@+id/iv_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_15"
                    android:src="@drawable/plus_icon" />

            </LinearLayout>

            <TextView
                style="@style/tv_medium"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@color/black"
                android:padding="@dimen/margin_15"
                android:text="@string/label_for_here"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_togo"
                style="@style/tv_normal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rect_border_bg"
                android:padding="@dimen/margin_15"
                android:text="@string/label_to_go"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_delivery"
                style="@style/tv_normal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/rect_border_bg"
                android:padding="@dimen/margin_15"
                android:text="@string/label_delivery"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
